<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.casehub</groupId>
  <artifactId>casehub-eidos-parent</artifactId>
  <version>0.2-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>CaseHub Eidos - Parent</name>
  <description>Agent identity — structured descriptor, discovery registry, vocabulary system, and system prompt generation for Quarkus applications</description>
  <url>https://github.com/casehubio/eidos</url>

  <modules>
    <module>api</module>
    <module>runtime</module>
    <module>persistence-memory</module>
    <module>deployment</module>
    <module>vocab</module>
    <module>examples</module>
    <module>eval</module>
    <module>graph</module>
  </modules>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>casehubio GitHub Packages</name>
      <url>https://maven.pkg.github.com/casehubio/eidos</url>
    </repository>
    <snapshotRepository>
      <id>github</id>
      <name>casehubio GitHub Packages</name>
      <url>https://maven.pkg.github.com/casehubio/eidos</url>
      <uniqueVersion>false</uniqueVersion>
    </snapshotRepository>
  </distributionManagement>

  <scm>
    <connection>scm:git:https://github.com/casehubio/eidos.git</connection>
    <developerConnection>scm:git:https://github.com/casehubio/eidos.git</developerConnection>
    <url>https://github.com/casehubio/eidos</url>
    <tag>HEAD</tag>
  </scm>

  <repositories>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/casehubio/*</url>
      <snapshots><enabled>true</enabled></snapshots>
    </repository>
  </repositories>

  <properties>
    <quarkus.version>3.32.2</quarkus.version>
    <langchain4j.version>1.14.1</langchain4j.version>
    <compiler-plugin.version>3.13.0</compiler-plugin.version>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <surefire-plugin.version>3.2.5</surefire-plugin.version>
    <casehub-platform-api.version>0.2-SNAPSHOT</casehub-platform-api.version>
    <casehub-ledger-api.version>0.2-SNAPSHOT</casehub-ledger-api.version>
    <casehub-ledger.version>0.2-SNAPSHOT</casehub-ledger.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus.platform</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-platform-api</artifactId>
        <version>${casehub-platform-api.version}</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-ledger-api</artifactId>
        <version>${casehub-ledger-api.version}</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-ledger</artifactId>
        <version>${casehub-ledger.version}</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.26.3</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>dev.langchain4j</groupId>
        <artifactId>langchain4j-core</artifactId>
        <version>${langchain4j.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire-plugin.version}</version>
          <configuration>
            <systemPropertyVariables>
              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            </systemPropertyVariables>
          </configuration>
        </plugin>
        <plugin>
          <groupId>io.smallrye</groupId>
          <artifactId>jandex-maven-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
